--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 		<!-- Bootstrap jQuery -->
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
-		<!-- Load Lora font -->
-		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
-		<!-- Puruse style -->
-		<link rel="stylesheet" href="https://faculty.washington.edu/ajko/books/peruse/peruse.css">
-
-		<!-- Peruse app -->
-		<script src="https://faculty.washington.edu/ajko/books/peruse/build/peruse.js"></script>
+		<!-- Peruse -->
+		<script src="https://faculty.washington.edu/ajko/peruse/peruse.js"></script>
+		<link rel="stylesheet" href="https://faculty.washington.edu/ajko/peruse/peruse.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://faculty.washington.edu/ajko/peruse/ios-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/peruse/favicon.png">		
 
     </head>
 	<body onload="peruse('book.json')">
