Fixed bad highlight color.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			.bookish-dark {
 				--bookish-background-color: #141421;
 				--bookish-paragraph-color: #DADADA;
-				--bookish-highlight-color: #070707;
+				--bookish-highlight-color: #2b8ae3;
 				--bookish-link-color: #2b8ae3;
 				--bookish-bullet-color: #2b8ae3;
 			}
