--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</style>
 
     </head>
-	<body onload="bookish()">
+	<body onload="bookish('/ajko/books/foundations-of-information')">
 		
 		<script type="text/javascript">
 		
