ASCII dark mode
I made a dark mode version of the ASCII image. When dark mode is activated it will use the appropriate image.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 
     </head>
 	<body>
+
+		<picture>
+			<source srcset="images/ASCII-dark-mode.png" media="(prefers-color-scheme: dark)">
+			<img src="images/ASCII.png">
+		  </picture>
 		
 		<script type="text/javascript">
 		
